k8s/d2c/base/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: d2c-event-consumer
  labels:
    app: d2c-event-consumer
    monitoring: d2c-consumer
spec:
  selector:
    app: d2c-event-consumer
  ports:
    - name: metrics
      port: 9103
      targetPort: metrics
