k8s/d2c/base/outbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: d2c-outbox-publisher
  labels:
    app: d2c-outbox-publisher
    monitoring: d2c-outbox
spec:
  selector:
    app: d2c-outbox-publisher
  ports:
    - name: metrics
      port: 9102
      targetPort: metrics
